# Planta-Controle

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  control_task.c  control_task.h  http_client_task.c  http_client_task.h  idf_component.yml  main.c  shared_resources.h  udp_client_task.c  wifi_manager.c  wifi_manager.h
main/hal/: hal_motor_pwm.c  hal_motor_pwm.h  hal_sensor_adc.c  hal_sensor_adc.h
main/math/: control_algorithms.c  control_algorithms.h
main/net/: udp_comms_task.c  udp_comms_task.h  wifi_manager.c  wifi_manager.h
main/rtos/: control_task.c  control_task.h  ipc_manager.c  ipc_manager.h
teste/: control_task.c  teste.c
